--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <title>Momentum App</title>
     </head>
     <body>
-        <form id="login-form">
+        <form class="hidden" id="login-form" >
             <input required maxlength="15" type="text" placeholder="What is your name?"/>
             <button>Log In</button>
         </form>
+        <h2 id="clock">00:00:00</h2>
+        <h1 id="greeting"></h1>
         <script src = "app.js"></script>
+        <script src = "clock.js"></script>
     </body>
 </html>
