--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
             <input required maxlength="15" type="text" placeholder="What is your name?"/>
             <button>Log In</button>
         </form>
-        <h2 id="clock">00:00:00</h2>
+        <h1 id="clock"></h1>
         <h1 id="greeting"></h1>
-        <script src = "app.js"></script>
-        <script src = "clock.js"></script>
+        <form id = "todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter" required/>
+        </form>
+        <ul id = "todo-list"></ul>
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
+        <script src = "js/app.js"></script>
+        <script src = "js/clock.js"></script>
+        <script src = "js/quotes.js"></script>
+        <script src = "js/background.js"></script>
+        <script src = "js/todo.js"></script>
     </body>
 </html>
